# calendar

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
desktop/: calendar.desktop  install.sh
src/: main.rs
ui/: app.slint
